<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/query_news_app"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_url_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        android:text="@string/news_app_url_currently"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/powered_by_newsapi_org" />

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginTop="16dp">-->

        <!--<TextView-->
            <!--android:id="@+id/tv_newsApp_search_results_json"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/make_a_search"-->
            <!--android:fontFamily="monospace"-->
            <!--android:textAlignment="center"-->
            <!--android:textSize="18sp" />-->
    <!--</ScrollView>-->

    <!--<TextView-->
        <!--android:id="@+id/tv_newsApp_search_results_json2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/make_a_search"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="18sp" />-->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/news_recyclerview">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>